<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizapp"
        android:textSize="35sp"
        android:textColor="#8BC34A"
        android:layout_marginTop="14dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/what_is_your_name"
                android:padding="10dp"
                android:layout_marginBottom="4dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" android:id="@+id/name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finish_button"
                android:text="@string/start"
                android:layout_marginTop="12dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>