<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textSize="35sp"
            android:textColor="#8BC34A"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" android:layout_gravity="center_horizontal"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

            <TextView
                    android:id="@+id/score_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/score_title"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"/>

            <TextView
                    android:id="@+id/username_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:padding="10dp"
                    android:layout_marginBottom="4dp"/>

            <ImageView android:layout_width="match_parent" android:layout_height="214dp"
                       android:contentDescription="Trophy Image"
                       android:src="@drawable/tropy"
                       android:foregroundGravity="center_vertical"

            >

            </ImageView>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_button"
                    android:text="@string/finish"
                    android:layout_marginTop="12dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>